# FlowSuits

./: .gitignore  CMakeLists.txt  README.md
Generators/: CMakeLists.txt
Generators/include/: GenBase.hpp
Generators/include/windows/: GenKeyInput.hpp
Generators/src/: GenKeyInput.cpp
Receivers/: CMakeLists.txt
Receivers/include/windows/: RecKeySim.hpp
Receivers/src/: RecKeySim.cpp
Tests/: CMakeLists.txt
Tests/src/: genLoader.cpp
include/: Base.hpp  GenBase.hpp  RecBase.hpp
